# SystemObslugiStudentow

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  koncepcja_bazy_danych.vsdx  ~$$koncepcja_bazy_danych.~vsdx
docs/: nibyuml.vsdx  sos.sql
html/: dane_osobowe.html  grupy_ankiety.html  indeks.html  index.html  konto_wylaczone.html  kursy_oceny.html  kursy_oceny_uczestnik.html  kursy_terminy.html  kursy_zajecia.html  logowanie.html  navbar.html  ogloszenia.html  rejestracja.html  test.html  wiadomosc_nowa.html  wiadomosci.html  wyloguj.html  zajecia_prowadzacy.html  zajecia_prowadzacy_uczestnicy.html  zapisy.html  zapisy_kursy.html  zapisy_kursy_grupy.html  zarzadzanie_grupy.html  zarzadzanie_grupy_terminy.html  zarzadzanie_grupy_uczestnicy.html  zarzadzanie_grupy_uczestnik_oceny.html  zarzadzanie_kursy.html  zarzadzanie_sprawy.html  zarzadzanie_sprawy_definicje.html  zarzadzanie_uzytkownicy.html  zarzadzanie_uzytkownicy_edycja.html  zarzadzanie_uzytkownicy_nowy.html  zarzadzanie_uzytkownicy_uprawnienia.html  zarzadzanie_zapisy.html
html/css/: main.css  modal.css  navbar.css
html/error/: 401.html  404.html  500.html
html/js/: main.js  nav.js
migrations/2021-04-17-190637_sos2/: down.sql  up.sql
migrations/2021-04-20-180239_sos4/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  models_announcements.rs  models_applications.rs  models_auth.rs  models_courses.rs  models_enrollment.rs  models_groups.rs  models_groups_frequency.rs  models_messages.rs  models_scores.rs  models_user.rs  router.rs  router_announcements.rs  router_applications.rs  router_auth.rs  router_courses.rs  router_enrollment.rs  router_groups.rs  router_groups_frequency.rs  router_messages.rs  router_scores.rs  router_user.rs  schema.rs  static_html.rs
src/routes/: courses.rs  mod.rs  user.rs
