[package]
name = "system_obslugi_studentow"
version = "0.1.0"
authors = ["DzimiX <dzimixpl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Powerful date and time functionality
chrono = { version = "0.4.6", features = ["serde"] }
yew = "*"
mysql = "*"

# For connecting with the MySQL database
diesel = { version = "*", features = ["chrono", "mysql"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "*"

# Lazy static initialization
lazy_static = "1.3.0"

# Rocket Webserver
rocket = "*"
rocket_contrib = { version = "*", features = ["json", "diesel_mysql_pool"] }

# Serialization/Deserialization
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"

sqlx = { version = "*", features = [ "runtime-async-std-native-tls", "mysql" ] }
async-std = { version = "*", features = [ "attributes" ] }