[package]
name = "system_obslugi_studentow"
version = "0.1.0"
authors = ["DzimiX <dzimixpl@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "*", features = ["chrono", "mysql"] }
diesel_codegen = { version = "*", features = ["mysql"] }

r2d2 = "*"
r2d2-diesel = "*"

rocket = "*"
rocket_codegen = "*"
rocket_contrib = { version = "*", features = ["json", "diesel_mysql_pool"] }

serde_json = "*"
serde = "*"
serde_derive = "*"